2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.h:
	  - Remove obfuscated comment after last #endif.

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/maxwordseg.h, src/maxwordseg.cpp:
	  - Apply "indent -nut" + manual adjustments.

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.h, src/abswordseg.cpp:
	  - Reformat source as GNU style using "indent -nut" plus manual
	    adjustments.

2011-12-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	  - Adjust loops.

2011-12-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	  - Tokenize punctuation marks in chunks, not in characters,
	    to prevent breaking word in between, fixing problem with `` or ''
	    at line beginning in LaTeX. This should also be true in general.

2011-12-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/maxwordseg.cpp (MaxWordSeg::WordSegArea):
	  - Reformat source a little bit.

2011-12-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::SwapLinkSep, AbsWordSeg::GetBestSen):
	  - Reformat source a little bit.

2011-12-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	  - Reformat source a little bit.

2011-12-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	  - Guard against i being 0 before accessing sen[i-1].

2011-12-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::IsNumber, AbsWordSeg::IsEnglish):
	  - Replace ASCII range checks with ctype.h functions.

2011-12-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	  - Replace ASCII range checks with ctype.h functions.
	  - Replace TIS-620 range check with macro function.
